--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "fbjs": "^3.0.4",
+    "moment": "^2.29.3",
     "react": "17.0.2",
     "react-native": "0.68.1",
     "react-native-elements": "^3.4.2",
