--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.2",
     "react-native": "0.68.1",
     "react-native-elements": "^3.4.2",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
