--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "react": "17.0.2",
     "react-native": "0.68.1",
     "react-native-elements": "^3.4.2",
+    "react-native-flash-message": "^0.2.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-video": "^5.2.0"
   },
