--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.29.3",
     "react": "17.0.2",
     "react-native": "0.68.1",
+    "react-native-animatable": "^1.3.3",
     "react-native-elements": "^3.4.2",
     "react-native-flash-message": "^0.2.1",
     "react-native-linear-gradient": "^2.5.6",
