--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "@react-native-community/cameraroll": "^4.1.2",
-    "@react-native-community/datetimepicker": "^6.1.3",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "fbjs": "^3.0.4",
+    "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "react": "17.0.2",
     "react-native": "0.68.1",
     "react-native-animatable": "^1.3.3",
+    "react-native-date-picker": "^4.2.1",
     "react-native-elements": "^3.4.2",
     "react-native-flash-message": "^0.2.1",
     "react-native-linear-gradient": "^2.5.6",
