--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-native-screens": "^3.13.1",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-video": "^5.2.0"
+    "react-native-video": "^5.2.0",
+    "react-native-video-processing": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
