--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-date-picker": "^4.2.1",
     "react-native-elements": "^3.4.2",
     "react-native-flash-message": "^0.2.1",
+    "react-native-fs": "^2.20.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "^4.2.5",
