--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-flash-message": "^0.2.1",
     "react-native-fs": "^2.20.0",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-material-menu": "^2.0.0",
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
