--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-video": "^5.2.0",
-    "react-native-video-processing": "^2.0.0"
+    "react-native-video-processing": "^2.0.0",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
