--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -271,6 +271,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.code.gson:gson:2.8.6'
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
     //noinspection GradleDynamicVersion
